[tool.poetry]
name = "skeeter"
version = "0.1.0"
description = "Slack bot for collecting local gossip"
authors = ["Manas <manas.gooner11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
slackclient = "^2.9.1"
pyyaml = "^5.3.1"
pydash = "^4.8.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
skeeter = "skeeter.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
